# swagger/swagger.yaml
@@ -34,21 +34,21 @@ paths:
           description: "successful operation"
         "101":
           description: "Invalid status value"
-  /buy/getPhonesFromDB:
+  /buy/getStep1WithBrand:
     get:
       tags:
       - "buy"
-      summary: "Finds phones with nickname"
+      summary: "Finds devices with brand_id"
       description: "at buy/1/brand"
-      operationId: "getPhonesFromDb"
+      operationId: "getStep1WithBrand"
       produces:
       - "application/json"
       parameters:
-      - name: "nickname"
+      - name: "brand_id"
         in: "query"
-        description: ""
+        description: "1: Samsung, 2: Apple, 3:LG, 4:Xiaomi"
         required: false
-        type: "string"
+        type: "integer"
         collectionFormat: "multi"
       responses:
         "200":
